2010-08-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Add $pic_flag to archive_cmds and archive_expsym_cmds.
	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS)
	<archive_cmds, archive_expsym_cmds>
	[GNU ld, netbsd]: Add $pic_flag if ELF.
	[GNU ld, solaris]: Likewise.
	[GNU ld, default case]: Likewise.
	[!GNU ld, freebsd, dragonfly]: Add $pic_flag.
	[!GNU ld, GCC, hpux9]: Add $pic_flag.
	[!GNU ld, GCC, hpux10]: Replace -fPIC with $pic_flag
	[!GNU ld, GCC, hpux11, !hppa*64]: Replace -fPIC with $pic_flag.
	[!GNU ld, GCC, irix5, irix6, nonstopux]: Add $pic_flag.
	[!GNU ld, GCC, osf4, osf5]: Likewise.
	[!GNU ld, GCC, solaris]: Likewise.
	(_LT_LANG_CXX_CONFIG) <archive_cmds, archive_expsym_cmds>
	[hpux9]: Add $pic_flag if $GXX.
	[hpux10, hpux11, !hppa*64]: Replace -fPIC with $pic_flag.
	[irix5, irix6]: Add $pic_flag if $GXX.
	[osf4, osf5]: Likewise.
	[solaris]: Add $pic_flag if $GXX and not GCC 2.7.

	Uniform const'ness of symlist variable lt_preloaded_symbols.
	On some systems, lt_preloaded_symbols may not be declared
	const due to relocation issues.  C99 requires qualification to
	match for compatible declarations, so ensure we declare
	const'ness in the same way everywhere; link-time optimization
	may otherwise rightfully complain about inconsistencies.
	Since ltdl.h may not depend upon config.h, rely on system
	defines for choosing const'ness.
	* NEWS: Update.
	* doc/libtool.texi (Dlpreopening): Document this issue.
	* libltdl/config/ltmain.m4sh (func_generate_dlsyms):
	[__WINDOWS__, __CYGWIN__, _WIN32_WCE]: Define LT_DLSYM_CONST
	according to system defines.  Remove old shell cruft.  Use
	LT_DLSYM_CONST for lt_${my_prefix}_LTX_preloaded_symbols.
	* libltdl/libltdl/lt_system.h (LT_DLSYM_CONST): Likewise,
	define LT_DLSYM_CONST according to system defines.
	* tests/demo/foo.h (LT_DLSYM_CONST): Likewise.
	* tests/pdemo/foo.h (LT_DLSYM_CONST): Likewise.
	* tests/demo/dlmain.c (lt_dlsymlist): Use LT_DLSYM_CONST.
	* tests/pdemo/longer_file_name_dlmain.c (lt_dlsymlist):